Use built in base64 to allow use on jdk9+